edits index params and adds heroku path to api url.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
  <form id="sign-up">
    <h3>Sign Up</h3>
-   <input type="email" name="credentials[email]" placeholder="Enter email">
-   <input type="password" name="credentials[password]" placeholder="Enter password">
-   <input type="password" name="credentials[password_confirmation]" placeholder="Confirm Password">
+   <input type="email" name="email" placeholder="Enter email">
+   <input type="password" name="password" placeholder="Enter password">
+   <input type="password" name="password_cofirmation" placeholder="Confirm Password">
    <button>Sign up</button>
  </form>
 
@@ -27,8 +27,8 @@
 
  <form id="sign-in">
    <h3>Sign In</h3>
-   <input type="email" name="credentials[email]" placeholder="Enter email">
-   <input type="password" name="credentials[password]" placeholder="Enter Password">
+   <input type="email" name="email" placeholder="Enter email">
+   <input type="password" name="password" placeholder="Enter Password">
    <button>Sign In</button>
  </form>
 
