--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
       <!-- Do not add `script` tags-->
-    <!-- <script src="assets/scripts/api.js" type="text/javascript" charset="utf-8" defer></script> -->
+    <script src="assets/scripts/events.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="assets/scripts/app.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
