--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
     <button>Create Workout</button>
   </form>
 
+  <div class ="Workouts">
+    <!-- Fetch all workout for user and display -->
 
-
-
+  </div>
 
 </body>
 
