--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
   <script src="public/assets/scripts/app.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/assets/scripts/api.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/assets/scripts/config.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/assets/scripts/store.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/assets/scripts/ui.js" type="text/javascript" charset="utf-8" defer></script>
   <script src="public/assets/scripts/events.js" type="text/javascript" charset="utf-8" defer></script>
 </head>
 
