--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
   <form id="Create-Workout">
     <h3>Create Workout</h3>
-    <input type="text" name="workout[routine]" placeholder="routine name">
-    <input type="number" name="workout[sets]" placeholder="sets">
-    <input type="number" name="workout[reps]" placeholder="reps">
-    <input type="number" name="workout[time_spent]" placeholder="time spent">
+    <input type="text" name="workout_log[routine]" placeholder="routine name">
+    <input type="number" name="workout_log[sets]" placeholder="sets">
+    <input type="number" name="workout_log[reps]" placeholder="reps">
+    <input type="number" name="workout_log[time_spent]" placeholder="time spent">
     <button>Create Workout</button>
   </form>
 
