--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <h1>Fitness Buddy</h1>
   <h2 id="message"></h2>
 
+<div id="before-sign-in">
 
   <form id="sign-up">
     <h3>Sign Up</h3>
@@ -28,7 +29,6 @@
   </form>
 
 
-
   <form id="sign-in">
     <h3>Sign In</h3>
     <input type="email" name="email" placeholder="Enter email">
@@ -36,6 +36,9 @@
     <button>Sign In</button>
   </form>
 
+</div>
+
+<div id="after-sign-in">
 
   <form id="change-password">
     <h3>Change Password</h3>
@@ -70,24 +73,28 @@
       <input type="number" name="workout_log[time_spent]" placeholder="time spent">
       <button>Update Workout</button>
     </form>
-    <form id="showWorkout">
 
+    <form id="showWorkout">
         <button>View this workout log!</button>
         <input type="number" min="0" name="workout_log[id]" placeholder='Enter workout_log ID' required>
     </form>
-    <form id="deleteWokout">
 
+    <form id="deleteWokout">
           <button>Delete this workout log!</button>
           <input type="number" min="0" name="workout_log[id]" placeholder='Enter workout_log ID' required>
-      </form>
-      <form id="showWorkouts">
+    </form>
 
+  <div id="showWorkouts">
       <button>View all Workout logs!</button>
-  </form>
+  </div>
 
   <div>
      <div id="workout-message"></div>
    </div>
+   <div>
+      <div id="workout-message2"></div>
+    </div>
+  </div>
 
 
 
